admin-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui
  namespace: default
  labels:
    app.kubernetes.io/name: admin-ui
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: admin-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: admin-ui
      annotations:
    spec:
      volumes:
        - name: script-volume
          configMap:
            name: admin-ui-script
            defaultMode: 0777
      imagePullSecrets:  
        - name: dpr-secret 
      containers:
        - name: admin-ui
          image: "ghcr.io/dfoxg/kratos-admin-ui:v2.2.0"
          imagePullPolicy: Always
          ports:
            - name: admin-ui
              containerPort: 8080
              protocol: TCP
