admin-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: admin-ui.test.info
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-ui
                port:
                  number: 3000
